// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthBar should render HealthBar 1`] = `
<DocumentFragment>
  <div
    title="0.8"
  >
    <div
      class="styledComponents__DivContainer-sc-1ds8per-0 iMXxkL"
    >
      <div
        class="styledComponents__HealthContentExcellent-sc-1ds8per-1 gaVAHw"
      />
      <div
        class="styledComponents__HealthContentExcellent-sc-1ds8per-1 gaVAHw"
      />
      <div
        class="styledComponents__HealthContentExcellent-sc-1ds8per-1 gaVAHw"
      />
      <div
        class="styledComponents__HealthContentExcellent-sc-1ds8per-1 gaVAHw"
      />
      <div
        class="styledComponents__HealthContentExcellent-sc-1ds8per-1 gaVAHw"
      />
      <div
        class="styledComponents__HealthContentExcellent-sc-1ds8per-1 gaVAHw"
      />
      <div
        class="styledComponents__ProgressEmptyContent-sc-1ds8per-4 cBcYCG"
      />
      <div
        class="styledComponents__ProgressEmptyContent-sc-1ds8per-4 cBcYCG"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`HealthBar should render HealthBar with blockNumber 1`] = `
<DocumentFragment>
  <div
    title="0"
  >
    <div
      class="styledComponents__DivContainer-sc-1ds8per-0 iMXxkL"
    >
      <div
        class="styledComponents__HealthContentModerate-sc-1ds8per-2 eocMlx"
      />
      <div
        class="styledComponents__ProgressEmptyContent-sc-1ds8per-4 cBcYCG"
      />
      <div
        class="styledComponents__ProgressEmptyContent-sc-1ds8per-4 cBcYCG"
      />
    </div>
  </div>
</DocumentFragment>
`;
